--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/formidable": "^3.4.5",
     "axios": "^1.7.3",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.1",
     "lucide-react": "^0.419.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
+    "next-cloudinary": "^6.11.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
